--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,11 +15,6 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: mixed-line-ending
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.971
-    hooks:
-    -   id: mypy
-        args: [--ignore-missing-imports]
 -   repo: https://github.com/asottile/seed-isort-config
     rev: v2.2.0
     hooks:
@@ -37,7 +32,10 @@ repos:
     hooks:
     -   id: pyupgrade
         args: [--py36-plus]
--   repo: https://github.com/pre-commit/mirrors-pylint
-    rev: 'v3.0.0a5'
+-   repo: local
     hooks:
     -   id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
