--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     -   id: check-executables-have-shebangs
     -   id: check-json
     -   id: check-yaml
+    -   id: check-toml
     -   id: debug-statements
     -   id: detect-aws-credentials
     -   id: detect-private-key
