Remove quotation for number

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,4 @@ profile = "black"
 known_third_party = ["flask", "flask_bootstrap"]
 
 [tool.pylint.format]
-max-line-length = "88"
+max-line-length = 88
