Integrate Flask-SQLAlchemy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ target-version = ['py310']
 
 [tool.isort]
 profile = "black"
-known_third_party = ["flask", "flask_bootstrap"]
+known_third_party = ["flask", "flask_bootstrap", "flask_sqlalchemy"]
 
 [tool.pylint.format]
 max-line-length = 88
