--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,2 @@
 SECRET_KEY=
-SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://postgres:{pw}@localhost/school'
+SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://{user}:{password}@localhost/school'
