Add environment variables

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,4 @@
+FIRST_NAME='your-first-name'
+FIRST_SURNAME='your-first-surname'
 SECRET_KEY=
 SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://{user}:{password}@localhost/school'
