--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,4 @@ max-line-length = 88
 
 [tool.pytest.ini_options]
 python_files = ["tests.py", "test_*.py"]
+filterwarnings = ["ignore::DeprecationWarning"]
