--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,13 @@ jobs:
   build-and-test:
     docker:
       - image: cimg/python:3.10.6
+        environment:
+          SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://ubuntu@localhost/circle_test?sslmode=disable
+      - image: circleci/postgres:14.5
+        environment:
+          POSTGRES_USER: ubuntu
+          POSTGRES_DB: circle_test
+          POSTGRES_PASSWORD: ''
     steps:
       - checkout
       - python/install-packages:
