--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - image: cimg/python:3.10.6
         environment:
           SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://ubuntu@localhost/circle_test?sslmode=disable
-      - image: circleci/postgres:14.5
+      - image: cimg/postgres:14.5.0
         environment:
           POSTGRES_USER: ubuntu
           POSTGRES_DB: circle_test
