Update CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,11 @@ jobs:
           name: Run tests
           command: |
             mkdir test-results
-            pytest -v --junitxml=test-results/junit.xml
+            pytest -v --junitxml=test-results/junit.xml --cov=app --cov-report=html tests
       - store_test_results:
           path: test-results
+      - store_artifacts:
+          path: htmlcov
 workflows:
   sample:
     jobs:
