--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,11 @@ target-version = ['py310']
 
 [tool.isort]
 profile = "black"
-known_third_party = ["alembic", "factory", "flask", "flask_bootstrap", "flask_migrate", "flask_sqlalchemy", "sqlalchemy", "sqlalchemy_utils", "werkzeug"]
+known_third_party = ["alembic", "factory", "flask", "flask_bootstrap", "flask_migrate", "flask_sqlalchemy", "pytest", "sqlalchemy", "sqlalchemy_utils", "werkzeug"]
 
 [tool.pylint.format]
 max-line-length = 88
+
+[tool.pytest.ini_options]
+python_files = ["tests.py", "test_*.py"]
+filterwarnings = ["ignore::DeprecationWarning"]
