--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ email-validator==1.3.0
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
-Flask-SQLAlchemy==2.5.1
+flask-sqlalchemy==3.0.0
 Flask-WTF==1.0.1
 psycopg2==2.9.3
 SQLAlchemy-Utils==0.38.3
