--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ Flask-Login==0.6.2
 Flask-Migrate==3.1.0
 flask-sqlalchemy==3.0.0
 Flask-WTF==1.0.1
+phonenumbers==8.12.56
 psycopg2==2.9.3
 SQLAlchemy-Utils==0.38.3
